# CUPLAS

./: .gitignore  README.md  pyproject.toml  setup.py
bench/: bench_helpers.py  config.yaml  create_plots_for_cuplas_vs_legacy_comparison.py  create_plots_for_plas++_vs_legacy_comparison.py  create_speedup_demo_video.py  cuplas_quality_over_size.json  cuplas_runtime_over_size.json  eval_plas_runtime_over_size.py  evaluate_benchlog.ipynb  legacy_plas_quality_over_size.json  legacy_plas_runtime_over_size.json  plas++_quality_over_size.json  plas++_runtime_over_size.json
bench/bench3dgs/: gaussian_model.py
plas/: __init__.py  legacy_plas.py
plas/include/: filter_less_than.cuh  filters.cuh  permuters.cuh  plas.cuh
plas/src/: bind.cu  filters.cu  lcg_permutation.cu  philox_permutation.cu  plas.cu
test/: Makefile  plas_unit_test.cu  test_fast_gaussian_filter.cu  test_permuters.cu  test_plas.cu  test_random_philox_permutation.py  test_sort_with_plas.py
